--- a/config/packages/fos_user.yaml
+++ b/config/packages/fos_user.yaml
@@ -1,6 +1,6 @@
 fos_user:
     db_driver: orm
-    user_class: App\Entity\
+    user_class: App\Entity\User
     firewall_name: main
     from_email:
         address: info@smart_shopping
